# cobot3

./: .gitignore  CLAUDE.md  LICENSE  README.md  requirements.txt  tatus
docs/: COVERAGE_FIX_EXECUTION_GUIDE.md  PX4_비행제어_캐스케이드_파라미터_정리.md  YOLO_EXECUTION_GUIDE.md  system_architecture.md  troubleshooting_coverage_grazing_occlusion.md  산림구조드론_경로계획_기술정리.md  실행 방식.md
isaac_sim/: README.txt  final_13.py  final_14.py  final_15.py  final_16.py  final_24.py  forest_rescue_sim.py  generated_environment_meshes.npz  generated_ground_truth.json  generated_navigation_surface.npz  generated_search_plan.json  generated_terrain_mesh.npz  imu_filter_node.py  ring_filler_node.py  sim_config.py  sim_drone.py  sim_people.py  sim_terrain.py  sim_utils.py  sim_viewports.py
isaac_sim/worlds/: forest_world.usda  my_forest.usd
scripts/: 01_mavsdk_takeoff_test.py  02_mavsdk_motion_test.py  03_sensor_view_test.py  04_camera_yaw_test.py  apply_direction_yaw_patch.py  build_ros2.sh  check_yolo_setup.sh  process_mission_maps.py  record_mission_maps.py  setup_integration_env.sh  validate_v2_step1_dynamic_fleet.py
src/forest_rescue_interfaces/: CMakeLists.txt  package.xml
src/forest_rescue_interfaces/msg/: VictimDetection.msg
src/forest_rescue_system/: package.xml  setup.cfg  setup.py
src/forest_rescue_system/config/: forest_rescue.yaml  forest_rescue_1.rviz  forest_rescue_2.rviz  forest_rescue_3.rviz  forest_rescue_4.rviz  forest_rescue_multi.rviz
src/forest_rescue_system/forest_rescue_system/: __init__.py  cooperative_search_planner.py  coverage_evaluation_manager_node.py  coverage_geometry.py  coverage_mesh.py  coverage_ownership.py  coverage_utils.py  coverage_visualization_node.py  drone_controller_node.py  human_detector_node.py  log_utils.py  mapping_manager_node.py  mission_manager_node.py  obstacle_monitor_node.py  pointcloud_local_mapper_node.py  rviz_visualization_node.py  sensor_tf_node.py  victim_localizer_node.py
src/forest_rescue_system/launch/: forest_rescue_system.launch.py
src/forest_rescue_system/test/: test_coverage_geometry.py  test_coverage_mesh.py  test_coverage_ownership.py  test_coverage_visualization_node.py
(+55 files in other folders)
